--- a/web/css/main.css
+++ b/web/css/main.css
@@ -9784,12 +9784,52 @@ textarea.form-control-lg {
     position: absolute;
     top: 0; }
 
+  .about_imgchef {
+    position: absolute;
+    top: 0; }
+
   .landing_invite {
     text-align: justified; } }
 .about_img {
   /*    position: absolute;*/
   z-index: 99; }
 
+/*left*/
+.about_img {
+  opacity: 0;
+  transform: translateX(-10px); }
+
+.animate-fadeInLeft {
+  opacity: 1;
+  animation-name: fadeInLeft;
+  animation-fill-mode: both;
+  animation-duration: 1s; }
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-10px); }
+  to {
+    opacity: 1;
+    transform: translateX(0); } }
+/*right*/
+.about_imgchef {
+  opacity: 0;
+  transform: translateX(10px); }
+
+.animate-fadeInRight {
+  opacity: 1;
+  animation-name: fadeInRight;
+  animation-fill-mode: both;
+  animation-duration: 1s; }
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(10px); }
+  to {
+    opacity: 1;
+    transform: translateX(0); } }
 .title h2, .title .h2 {
   position: absolute;
   top: 0;
@@ -9832,12 +9872,21 @@ textarea.form-control-lg {
 .spinning {
   animation: spin 60s infinite linear; }
 
+.btn_all {
+  border-radius: 15px 50px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+
+.navbar {
+  background: transparent;
+  transition: background 0.3s ease-in-out;
+  color: #d54000; }
+
 .nav_link {
   position: relative; }
 
 .nav_link :hover {
   text-decoration: underline;
-  border-bottom: 2px solid #d64000; }
+  border-bottom: 4px solid #A33100; }
 
 .nav_link ::after {
   content: '';
@@ -9845,16 +9894,40 @@ textarea.form-control-lg {
   transition: all 0.2s;
   height: 2px;
   width: 100%;
-  background-color: #d64000;
+  background-color: #A33100;
   position: absolute;
   bottom: 0;
   left: 0; }
 
-.nav_link :hover::after {
-  opacity: 1; }
+.custom-nav {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
 
-.btn_all {
-  border-radius: 15px 50px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+.custom-nav li {
+  margin-right: 1rem; }
+
+.custom-nav li:first-child {
+  margin-left: 0; }
+
+.custom-nav a {
+  text-decoration: none;
+  padding: 0.5rem; }
+
+.custom-nav a:hover {
+  color: #A33100; }
+
+.custom-nav a.active:hover {
+  color: #E1D9D1; }
+
+.navbar.active {
+  background: #d54000;
+  color: #fff; }
+
+.nav_link.active :hover {
+  text-decoration: underline;
+  border-bottom: 4px solid #E1D9D1; }
 
 /*# sourceMappingURL=main.css.map */
