Spinning Animation for Balut Done!

--- a/web/scss/main.scss
+++ b/web/scss/main.scss
@@ -191,7 +191,7 @@ primary: #d54000
         height: auto;
     }
 }
-
+   /*spinning animation egg*/
 @keyframes spin {
     from {
         transform: rotate(0deg);
